Save public keys on server side.